# gebietsstammdaten_zh

./: .gitignore  LICENSE  README.md  Variablen.md
api/: Beispielabfragen.R  README.md
code_vorlagen/: README.md
code_vorlagen/R/: README.md
code_vorlagen/api/: Beispielabfragen.R
code_vorlagen/python/: gebietsstammdaten_demo.ipynb  generate_steckbriefe.ipynb  pyproject.toml
code_vorlagen/python/src/gebietsstammdaten_zh/: __init__.py
docs/: ontology.ttl
docs/bezirke/: 101.html  102.html  103.html  104.html  105.html  106.html  107.html  108.html  109.html  110.html  111.html  112.html
docs/gemeinden/: 1.html  10.html  100.html  101.html  102.html  102_gis_b.html  11.html  111.html  112.html  113.html  114.html  115.html  116.html  117.html  118.html  119.html  12.html  120.html  121.html  13.html  131.html  135.html  136.html  137.html  138.html  139.html  14.html  141.html  151.html  152.html  153.html  154.html  155.html  156.html  157.html  158.html  159.html  160.html  161.html  172.html  (+121 more)
docs/raumplanungsregionen/: 101.html  102.html  103.html  104.html  105.html  106.html  107.html  (+4 more)
excel_add_in/: Gebietsstammdaten_V1.1.xlsm  README.md
lod/: generate_lod.ipynb  ontology.ttl  pyproject.toml
openrefine/: README.md
script_vorlagen/: README.md
script_vorlagen/python/: README.md  Wikidata_Pipeline.ipynb  generate_steckbriefe.ipynb  pyproject.toml
script_vorlagen/python/daten/: gemeinde_code_jahr.csv
script_vorlagen/python/src/gebietsstammdaten_zh/: __init__.py  gebietsstammdaten_demo.ipynb
wikidata/: README.md  alle_gemeinden_zh.sparql
(+178 files in other folders)
